# ds-sd-setup

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
docs/: index.html
macos/: app.icns
src/: main.c  platform.c  platform.h  setup.c  setup.h
